# k-gnn

./: .gitignore  CMakeLists.txt
k_gnn/: __init__.py  dataloader.py  transform.py
